<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Holo.Light.ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbarStyle="outsideInset"
    android:background="@drawable/wall"

    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="9dp"
        tools:context=".alram.AlarmDrug_activity">

        <TextView
            style="@style/Headings"
            android:background="@drawable/custom_buttom_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="#F30303"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/alarm"
            android:textSize="27sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.8"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:text="giờ"
                android:textSize="20dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/hours"
                android:layout_marginLeft="5dp"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/custom_buttom_3"
                android:hint="@string/hours"
                android:nextFocusForward="@+id/minutes"
                android:textStyle="bold" />
            <TextView
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:text="phút"
                android:textSize="20dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:layout_marginLeft="5dp"
                android:id="@+id/minutes"
                android:background="@drawable/custom_buttom_3"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:hint="@string/minutes"
                android:nextFocusForward="@+id/vibrate"
                android:textStyle="bold" />

        </LinearLayout>

        <Switch
            android:id="@+id/vibrate"
            style="@style/Headings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="9dp"
            android:layout_weight="1"
            android:text="@string/vibrate"

            />

        <EditText
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:layout_weight="1.5"
            android:hint="@string/label"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:nextFocusForward="@+id/count" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/Headings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/count" />

            <Spinner
                android:id="@+id/count"
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/Headings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="9dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/gap" />

            <SeekBar
                android:id="@+id/interval"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:max="40"
                android:progress="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/Headings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="9dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/vol" />

            <SeekBar
                android:id="@+id/vol"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:max="40"
                android:progress="10" />
        </LinearLayout>

        <Button
            android:layout_width="300dp"
            android:background="@drawable/custom_buttom_3"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:onClick="setAlarm"
            android:text="@string/go" />
    </LinearLayout>
</ScrollView>
