<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drugandhopistal.ScollDrug_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameDrug"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingTop="6dp"
                android:text="ten thuoc"
                android:background="@drawable/custom_buttom_3"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_height="55dp" />
            <LinearLayout
                android:background="@drawable/custom_buttom_3"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="55dp">
                <TextView
                    android:paddingTop="6dp"
                    android:paddingLeft="20dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"

                    android:layout_width="wrap_content"
                    android:text="@string/giathuoc"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:text="gia"
                    android:id="@+id/tvGiathuoc"
                    android:textColor="@color/textBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/custom_buttom_3"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"

                    android:layout_width="wrap_content"
                    android:text="@string/thanhphan"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:text="thanh phan"
                    android:paddingRight="4dp"
                    android:id="@+id/tvThanhphan"
                    android:textColor="@color/textBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/custom_buttom_3"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"

                    android:layout_width="wrap_content"
                    android:text="@string/chidinh"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingTop="6dp"
                    android:paddingLeft="5dp"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:paddingRight="4dp"
                    android:text="chi dinh"
                    android:id="@+id/tvChidinh"
                    android:textColor="@color/textBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/custom_buttom_3"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"
                    android:layout_width="wrap_content"
                    android:text="@string/chongchidinh"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:text="chong cd"
                    android:id="@+id/tvChongcd"
                    android:paddingRight="4dp"
                    android:textColor="@color/textBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/custom_buttom_3"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"

                    android:layout_width="wrap_content"
                    android:text="@string/cachdung"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:id="@+id/tvCachDung"
                    android:text="cách dung"
                    android:textColor="@color/textBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/custom_buttom_3"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"

                    android:layout_width="wrap_content"
                    android:text="@string/tacdungphu"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingLeft="5dp"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:text="tach dung phu"
                    android:id="@+id/tvTacdungPhu"
                    android:textColor="@color/textBlack"
                    android:layout_width="wrap_content"
                    android:paddingRight="5dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/custom_buttom_3"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/textBlack"

                    android:layout_width="wrap_content"
                    android:text="@string/chuy"
                    android:layout_height="wrap_content" />
                <TextView
                    android:paddingTop="4dp"
                    android:paddingLeft="5dp"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:text="chu y"
                    android:id="@+id/tvChuY"
                    android:textColor="@color/textBlack"
                    android:paddingRight="5dp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>